--- a/app/models.html
+++ b/app/models.html
@@ -58,7 +58,7 @@
                     Caballo</p>
                   </div>
                   <div class="card-footer">
-                    <a href="#" class="btn btn-primary" onclick="showOptions(true);">Comenzar</a>
+                    <a href="multipleLvls.html" class="btn btn-primary" onclick="showOptions('1');">Comenzar</a>
                   </div>
                 </div>
 
@@ -70,7 +70,7 @@
                     Motor</p>
                   </div>
                   <div class="card-footer">
-                    <a href="#" class="btn btn-primary" onclick="showOptions(false)">Comenzar</a>
+                    <a href="multipleLvls.html" class="btn btn-primary" onclick="showOptions('2')">Comenzar</a>
                   </div>
                 </div>
               </div> <!-- Card-deck termination-->
