Nivel 1 y 2, links hechos.

--- a/app/models.html
+++ b/app/models.html
@@ -3,7 +3,11 @@
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
     <link rel="stylesheet" href="CSS/bootstrap.min.css">
     <script scr="js/bootstrap.min.js"></script>
-    <script src="js/objectsVisibility.js"></script>
+    <script>
+        function showOptions(level) {
+            localStorage.setItem("level", level);
+        }
+    </script>
     <link href="CSS/models.css" rel="stylesheet" type="text/css" >
 
     <head>
