Links de todos los niveles.

--- a/app/description.html
+++ b/app/description.html
@@ -16,11 +16,8 @@
           <!-- Top of the screen. Contains a home button and an option's text--> 
           <div class="top">
             <div class="row no-gutters">
-              <div class="col-0">
+              <div class="col-0" id="desc-back">
                   &nbsp;
-                  <a href="multipleLvls.html">
-                      <img src="images/atras.png" width="35" height="35">
-                    </a>
               </div>
               <div class="col-0 text-right">
               &nbsp;
