--- a/app/models.html
+++ b/app/models.html
@@ -50,7 +50,7 @@
                   <p class="card-text">Tutoriales básicos</p>
                   </div>
                   <div class="card-footer">
-                    <a href="#" class="btn btn-primary">Comenzar</a>
+                    <a href="#" class="btn btn-primary" onclick="showOptions('3')">Comenzar</a>
                   </div>
                 </div>
 
@@ -89,7 +89,7 @@
                       <p class="card-text">Girabot</p>
                     </div>
                     <div class="card-footer">
-                      <a href="#" class="btn btn-primary">Comenzar</a>
+                      <a href="description.html" class="btn btn-primary" onclick="setModel('Girabot');showOptions('3')">Comenzar</a>
                     </div>
                   </div>
 
@@ -100,7 +100,7 @@
                       <p class="card-text">Brazo mecánico</p>
                     </div>
                     <div class="card-footer">
-                      <a href="#" class="btn btn-primary">Comenzar</a>
+                      <a href="description.html" class="btn btn-primary" onclick="setModel('Brazo Mecánico');showOptions('3')">Comenzar</a>
                     </div>
                   </div>
 
@@ -111,7 +111,7 @@
                       <p class="card-text">Carro</p>
                     </div>
                     <div class="card-footer">
-                      <a href="#" class="btn btn-primary" >Comenzar</a>
+                      <a href="description.html" class="btn btn-primary" onclick="setModel('Carro');showOptions('3')" >Comenzar</a>
                     </div>
                   </div>
                 </div> <!-- Card-deck termination-->
