--- a/app/step.html
+++ b/app/step.html
@@ -2,14 +2,16 @@
 <html lang="sp">
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
     <link rel="stylesheet" href="CSS/bootstrap.min.css">
-    <script scr="../../js/bootstrap.min.js"></script>
+    <script scr="js/bootstrap.min.js"></script>
     <link href="CSS/global-styles.css" rel="stylesheet" type="text/css" >
+    <script src="js/models.js"></script>
 
     <head>
         <meta charset="UTF-8">
         <title>Tutorial Kit Robótico</title>
     </head>
-    <body>
+
+    <body onload="loadSteps(1)">
         <div>
           <!-- Top of the screen. Contains a home button and an option's text--> 
           <div class="top">
@@ -30,12 +32,12 @@
                       <div class="col-12 mt-3">
                           <div class="card">
                               <div class="card-horizontal">
-                                  <div class="img-square-wrapper">
-                                      <img class="image-size" src="images/micropiano.jpg" alt="Micropiano">
+                                  <div class="img-square-wrapper" id="step-image">
+
                                   </div>
                                   <div class="card-body">
-                                      <h4 class="card-title">Paso 1</h4>
-                                      <p class="card-text">Descripción breve del procedimiento actual</p>
+                                      <h4 class="card-title" id="step-title"></h4>
+                                      <p class="card-text" id="step-desc"></p>
                                   </div>
                               </div>
                           </div>  <!-- Card termination--> 
@@ -49,7 +51,7 @@
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-md-auto">
-                        <a class="btn btn-primary" href="description.html" role="button">&laquo; Anterior</a>
+                        <a class="btn btn-primary" href="description.html" role="button" onclick="loadSteps(-1)">&laquo; Anterior</a>
                     </div>
                     <div class="col">
                         <div class="progress progress-position">
@@ -57,7 +59,7 @@
                         </div>
                     </div>
                     <div class="col-md-auto text-right">
-                        <a class="btn btn-primary" href="#" role="button">Siguiente &raquo;</a>
+                        <a class="btn btn-primary" href="#" role="button" onclick="loadSteps(1)">Siguiente &raquo;</a>
                     </div>
                 </div>
             </div>
