--- a/app/step.html
+++ b/app/step.html
@@ -18,7 +18,7 @@
             <div class="row no-gutters">
               <div class="col-0">
                   &nbsp;
-                  <a href="../lvlOne.html">
+                  <a href="home.html">
                       <img src="images/home.png" width="35" height="35">
                     </a>
               </div>
@@ -49,18 +49,7 @@
           <!-- Bottom -->
           <section class="bottom-bar max-size">
             <div class="container-fluid">
-                <div class="row">
-                    <div class="col-md-auto">
-                        <a class="btn btn-primary" href="description.html" role="button" onclick="loadSteps(-1)">&laquo; Anterior</a>
-                    </div>
-                    <div class="col">
-                        <div class="progress progress-position">
-                            <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 10%" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100"></div>
-                        </div>
-                    </div>
-                    <div class="col-md-auto text-right">
-                        <a class="btn btn-primary" href="#" role="button" onclick="loadSteps(1)">Siguiente &raquo;</a>
-                    </div>
+                <div class="row" id="step-bottom">
                 </div>
             </div>
         </section> <!-- Bottom section termination-->
