--- a/app/models.html
+++ b/app/models.html
@@ -50,7 +50,7 @@
                   <p class="card-text">Tutoriales básicos</p>
                   </div>
                   <div class="card-footer">
-                    <a href="#" class="btn btn-primary" onclick="showOptions('3')">Comenzar</a>
+                    <a href="description.html" class="btn btn-primary" onclick="setModel('nivel0');showOptions('3')">Comenzar</a>
                   </div>
                 </div>
 
