--- a/app/ComponentDescription.html
+++ b/app/ComponentDescription.html
@@ -18,11 +18,7 @@
     <div class="right">
         <h1 id="desc-component-title"></h1>
         <div class="separator"></div>
-        <p>
-            Este es el nuevo Arduino Uno R3 utiliza el microcontrolador ATmega328. En adición a todas las características
-            de las tarjetas anteriores, el Arduino Uno utiliza el ATmega16U2 para el manejo de USB en lugar del 8U2
-            (o del FTDI encontrado en generaciones previas). Esto permite ratios de transferencia más rápidos y más memoria.
-            No se necesitan drivers para Linux o Mac (el archivo inf para Windows es necesario y está incluido en el IDE de Arduino).
+        <p id="componentDescription">
         </p>
     </div>
     <div class="fab"><a href="description.html"> <i class="fa fa-arrow-left fa-3x"> </i> </a></div>
