--- a/app/step.html
+++ b/app/step.html
@@ -35,7 +35,7 @@
                                   <div class="img-square-wrapper" id="step-image">
 
                                   </div>
-                                  <div class="card-body">
+                                  <div class="card-body sizecard">
                                       <h4 class="card-title" id="step-title"></h4>
                                       <p class="card-text" id="step-desc"></p>
                                   </div>
