Cargar secciones desde json.

--- a/app/description.html
+++ b/app/description.html
@@ -56,7 +56,7 @@
           <!-- Bottom -->
           <section class="max-size bottom-bar">
                 <section class="next-button">
-                    <a class="btn btn-primary" href="step.html" role="button" onClick="setFirstStep('1')">Siguiente &raquo;</a>
+                    <a class="btn btn-primary" href="step.html" role="button">Siguiente &raquo;</a>
                 </section>
         </section> <!-- Bottom section termination-->
         </div>
