--- a/app/subsection.html
+++ b/app/subsection.html
@@ -10,7 +10,7 @@
 <head>
     <meta charset="UTF-8">
 </head>
-<body onload="init()">
+<body onload="loadSubsections();">
 <div>
     <!-- Top of the screen. Contains a home button and an option's text-->
     <div class="top">
@@ -29,7 +29,7 @@
             </div>
             <div class="col-10 text-center">
                 <h6 class="option" >
-                    Secciones
+                    Subsecciones
                 </h6>
             </div>
         </div>
@@ -38,7 +38,7 @@
     <!-- Display the models by levels -->
     <section class="models-option">
         <!-- Second Card-deck-->
-        <div class="card-deck" id="zero-sections">
+        <div class="card-deck" id="zero-subsections">
         </div> <!-- Card-deck termination-->
     </section> <!-- Section termination-->
 </div>
