Cargar secciones desde json.

--- a/app/levelZero.html
+++ b/app/levelZero.html
@@ -36,7 +36,7 @@
     </div>
 
     <!-- Display the models by levels -->
-    <section class="models-option">
+    <section class="section-option">
         <!-- Second Card-deck-->
         <div class="card-deck" id="zero-sections">
         </div> <!-- Card-deck termination-->
