Cargar secciones con descripciones y subsecciones si las poseen.

--- a/app/section.html
+++ b/app/section.html
@@ -49,10 +49,7 @@
     </section> <!-- Section termination-->
 
     <!-- Bottom -->
-    <section class="max-size bottom-bar">
-        <section class="next-button">
-            <a class="btn btn-primary" href="sectionSteps.html" role="button">Siguiente &raquo;</a>
-        </section>
+    <section class="max-size bottom-bar" id="section-button-next">
     </section> <!-- Bottom section termination-->
 </div>
 </body>
