--- a/app/section.html
+++ b/app/section.html
@@ -5,13 +5,14 @@
 <script scr="../../js/bootstrap.min.js"></script>
 <link href="CSS/global-styles.css" rel="stylesheet" type="text/css" >
 <script src="js/levelZero.js"></script>
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 
 <head>
     <meta charset="UTF-8">
     <title>Tutorial Kit Robótico</title>
 </head>
 
-<body onload="loadSectionDescription();">
+<body onload="cardRow()">
 <div>
     <!-- Top of the screen. Contains a home button and an option's text-->
     <div class="top">
@@ -27,24 +28,9 @@
             </div>
         </div>
     </div>
-
     <!-- Display the models description -->
     <section class="center-content">
-        <div class="container-fluid">
-            <div class="row">
-                <div class="col-12 mt-3">
-                    <div class="card">
-                        <div class="card-horizontal">
-                            <div class="img-square-wrapper" id="section-desc-img">
-                            </div>
-                            <div class="card-body sizecard">
-                                <h4 class="card-title" id="section-desc-model-title"></h4>
-                                <p class="card-text" id='section-message'></p>
-                            </div>
-                        </div>
-                    </div>  <!-- Card termination-->
-                </div>
-            </div>
+        <div class="container-fluid" id="cartita">
         </div>  <!-- Container termination-->
     </section> <!-- Section termination-->
 
