se puede iniciar y salir correctamente

--- a/app/home.html
+++ b/app/home.html
@@ -29,14 +29,20 @@
 
             <div class="gear_image">
             </div>
-            <div class="circle_begin">
-                <a href="models.html">
+            <a href="models.html">
+                <div class="circle_begin">
+
                 <iniciar>Iniciar</iniciar>
-                </a>
+
+                </div>
+            </a>
+
+            <div onclick="quit()">
+                <div class="circle_exit">
+                    <salir> Salir </salir>
+                </div>
             </div>
-            <div class="circle_exit">
-                <salir onclick="quit()">Salir</salir>
-            </div>
+
         </div>
     </body>
 </html>
