"Level zero, incomplete 2"

--- a/app/models.html
+++ b/app/models.html
@@ -50,7 +50,7 @@
                   <p class="card-text">Tutoriales básicos</p>
                   </div>
                   <div class="card-footer">
-                      <a href="levelZero.html" class="btn btn-primary" onclick="setModel('Tutoriales Básicos');showOptions('2')">Comenzar</a>
+                      <a href="section.html" class="btn btn-primary" onclick="setModel('Tutoriales Básicos');showOptions('2')">Comenzar</a>
                   </div>
                 </div>
 
