--- a/app/section.html
+++ b/app/section.html
@@ -12,7 +12,7 @@
     <title>Tutorial Kit Robótico</title>
 </head>
 
-<body onload="cardRow()">
+<body onload="chargeGrid()">
 <div>
     <!-- Top of the screen. Contains a home button and an option's text-->
     <div class="top">
