Loading section description successfully :D

--- a/app/sectionSteps.html
+++ b/app/sectionSteps.html
@@ -11,7 +11,7 @@
     <title>Tutorial Kit Robótico</title>
 </head>
 
-<body onload="loadSectionSteps(1)">
+<body onload="loadSectionSteps(localStorage.getItem('sectionStep'))">
 <div>
     <!-- Top of the screen. Contains a home button and an option's text-->
     <div class="top">
