Nivel 0 UI complete

--- a/app/section.html
+++ b/app/section.html
@@ -9,9 +9,9 @@
 
 <head>
     <meta charset="UTF-8">
+
     <title>Tutorial Kit Robótico</title>
 </head>
-
 <body onload="init()">
 <div>
     <!-- Top of the screen. Contains a home button and an option's text-->
@@ -29,10 +29,10 @@
         </div>
     </div>
     <!-- Display the models description -->
-    <section class="center-content">
-        <div class="container-fluid" id="cartita">
+
+        <div id="cartita" width="1000%">
         </div>  <!-- Container termination-->
-    </section> <!-- Section termination-->
+
 
     <!-- Bottom -->
     <section class="max-size bottom-bar" id="section-button-next">
