--- a/app/ComponentDescription.html
+++ b/app/ComponentDescription.html
@@ -14,7 +14,7 @@
 
 <div class="fond"> <span class="s1"></span><span class="s2"></span></div>
 <div class="card">
-    <div class="thumbnail"><img class="left" src="images/arduino.jpg"/></div>
+    <div class="thumbnail" id ="component-img"></div>
     <div class="right">
         <h1 id="desc-component-title"></h1>
         <div class="separator"></div>
