--- a/app/models.html
+++ b/app/models.html
@@ -26,18 +26,24 @@
           <!-- Top of the screen. Contains a home button and an option's text-->
           <div class="top">
               <div class="row no-gutters">
-                  <div class="col-0 text-right">
-                  &nbsp;
+                  <div class="col-0">
+                      &nbsp;
                       <a href="home.html">
                           <img src="images/home.png" width="35" height="35">
-                        </a>
+                      </a>
                   </div>
-                  <div class="col-11 text-center">
-                    <h6 class="option" >
-                      Seleccioná el nivel que querás trabajar
-                    </h6>
+                  <div class="col-0 text-right">
+                      &nbsp;
+                      <a href="bibliography.html">
+                          <img src="images/bibliography.png" width="35" height="35">
+                      </a>
                   </div>
-                </div>
+                  <div class="col-10 text-center">
+                      <h6 class="option" >
+                          Seleccioná el nivel que querás trabajar
+                      </h6>
+                  </div>
+              </div>
             </div>
 
             <!-- Display the models by levels -->
