--- a/app/section.html
+++ b/app/section.html
@@ -17,14 +17,22 @@
     <!-- Top of the screen. Contains a home button and an option's text-->
     <div class="top">
         <div class="row no-gutters">
-            <div class="col-0" id="section-desc-back">
+            <div class="col-0">
                 &nbsp;
+                <a href="models.html">
+                    <img src="images/atras.png" width="35" height="35">
+                </a>
             </div>
             <div class="col-0 text-right">
                 &nbsp;
                 <a href="home.html">
                     <img src="images/home.png" width="35" height="35">
                 </a>
+            </div>
+            <div class="col-10 text-center">
+                <h6 class="option" >
+                    Secciones
+                </h6>
             </div>
         </div>
     </div>
