--- a/app/step.html
+++ b/app/step.html
@@ -15,14 +15,20 @@
         <div>
           <!-- Top of the screen. Contains a home button and an option's text--> 
           <div class="top">
-            <div class="row no-gutters">
-              <div class="col-0">
-                  &nbsp;
-                  <a href="home.html">
-                      <img src="images/home.png" width="35" height="35">
-                    </a>
+              <div class="row no-gutters">
+                  <div class="col-0">
+                      &nbsp;
+                      <a href="multipleLvls.html">
+                          <img src="images/atras.png" width="35" height="35">
+                      </a>
+                  </div>
+                  <div class="col-0 text-right">
+                      &nbsp;
+                      <a href="home.html">
+                          <img src="images/home.png" width="35" height="35">
+                      </a>
+                  </div>
               </div>
-            </div>
           </div>
 
           <!-- Display the models description -->
