Materiales agregados, nivel 0

--- a/app/sectionSteps.html
+++ b/app/sectionSteps.html
@@ -18,6 +18,12 @@
         <div class="row no-gutters">
             <div class="col-0">
                 &nbsp;
+                <a href="section.html">
+                    <img src="images/atras.png" width="35" height="35">
+                </a>
+            </div>
+            <div class="col-0 text-right">
+                &nbsp;
                 <a href="home.html">
                     <img src="images/home.png" width="35" height="35">
                 </a>
@@ -39,7 +45,9 @@
                                 <h4 class="card-title" id="section-step-title"></h4>
                                 <p class="card-text" id="section-step-desc"></p>
                             </div>
+
                         </div>
+                        <div id="optional-footer"></div>
                     </div>  <!-- Card termination-->
                 </div>
             </div>
