--- a/app/bibliography.html
+++ b/app/bibliography.html
@@ -46,8 +46,13 @@
                         SIK GUIDE Your Guide to the SparkFun Inventor’s Kit for Arduino. (n.d.). [ebook] Available at: https://cdn.sparkfun.com/datasheets/Kits/SFE03-0012-SIK.Guide-300dpi-01.pdf [Accessed 11 Mar. 2019].
                     </a>
 
+                    <a href="#" class="list-group-item list-group-item-action active disabled">Páginas Web</a>
+                    <a href="#" class="list-group-item list-group-item-action disabled">
+                        https://bitbloq.bq.com/#/
+                    </a>
+
                     <a href="#" class="list-group-item list-group-item-action active disabled">Íconos</a>
-                    <a href="#" class="list-group-item list-group-item-action" onclick="hey()">
+                    <a href="#" class="list-group-item list-group-item-action disabled">
                         https://icons8.com
                     </a>
 
