--- a/app/bibliography.html
+++ b/app/bibliography.html
@@ -50,6 +50,12 @@
                     <a href="#" class="list-group-item list-group-item-action disabled">
                         https://bitbloq.bq.com/#/
                     </a>
+                    <a href="#" class="list-group-item list-group-item-action disabled">
+                        https://aprendiendoarduino.wordpress.com/2016/11/13/bluetooth-en-arduino/
+                    </a>
+                    <a href="#" class="list-group-item list-group-item-action disabled">
+                        http://www.papeleriamodelo.com/tienda/pilas-triple-aaa/
+                    </a>
 
                     <a href="#" class="list-group-item list-group-item-action active disabled">Íconos</a>
                     <a href="#" class="list-group-item list-group-item-action disabled">
@@ -89,6 +95,9 @@
                     </a>
                     <a href="#" class="list-group-item list-group-item-action disabled">
                         https://www.instructables.com/id/Digital-and-Binary-Clock-With-Two-LED-Matrix-and-R/
+                    </a>
+                    <a href="#" class="list-group-item list-group-item-action disabled">
+                        https://www.prometec.net/producto/modulo-bluetooth-hc-06/#
                     </a>
                 </div>
           </div> <!-- Section termination-->
