--- a/app/step.html
+++ b/app/step.html
@@ -18,7 +18,7 @@
               <div class="row no-gutters">
                   <div class="col-0">
                       &nbsp;
-                      <a href="multipleLvls.html">
+                      <a href="models.html">
                           <img src="images/atras.png" width="35" height="35">
                       </a>
                   </div>
