Component description, scrollable description.

--- a/app/ComponentDescription.html
+++ b/app/ComponentDescription.html
@@ -17,9 +17,14 @@
     <div class="thumbnail" id ="component-img"></div>
     <div class="right">
         <h1 id="desc-component-title"></h1>
+        <div id="dialog-window">
+            <div sid="" style="overflow-y:scroll; overflow-x:hidden; height:340px;">
+                <p id="componentDescription"> </p>
+            </div>
+            <div id="footer">
+            </div>
+        </div>
         <div class="separator"></div>
-        <p id="componentDescription">
-        </p>
     </div>
     <div class="fab"><a href="description.html"> <i class="fa fa-arrow-left fa-3x"> </i> </a></div>
 </div>
