--- a/app/bibliography.html
+++ b/app/bibliography.html
@@ -40,10 +40,20 @@
                 <div class="list-group">
                     <a href="#" class="list-group-item list-group-item-action active disabled">Recursos Bibliográficos</a>
                     <a href="#" class="list-group-item list-group-item-action disabled">
-                        W. Evans, B. (2007). Arduino: Manual de Programación. [ebook] Disponible en: https://arduinobot.pbworks.com/f/Manual+Programacion+Arduino.pdf [Accesado el 11 de Marzo, 2019].
+                        W. Evans, B. (2007). Arduino: Manual de Programación. [ebook] Recuperado de: https://arduinobot.pbworks.com/f/Manual+Programacion+Arduino.pdf [Accesado el 11 de Marzo, 2019].
                     </a>
                     <a href="#" class="list-group-item list-group-item-action disabled">
-                        SIK GUIDE Your Guide to the SparkFun Inventor’s Kit for Arduino. (n.d.). [ebook] Available at: https://cdn.sparkfun.com/datasheets/Kits/SFE03-0012-SIK.Guide-300dpi-01.pdf [Accessed 11 Mar. 2019].
+                        SIK GUIDE Your Guide to the SparkFun Inventor’s Kit for Arduino. (n.d.). [ebook] Recuperado de: https://cdn.sparkfun.com/datasheets/Kits/SFE03-0012-SIK.Guide-300dpi-01.pdf [Accessed 11 Mar. 2019].
+                    </a>
+                    <a href="#" class="list-group-item list-group-item-action disabled">
+                        Aprendamos tecnología. (2011). Motores de corriente contínua. Santa Cruz de
+                        Tenerife, España.: Aprendamos tecnología. Recuperado de
+                        https://iesvillalbahervastecnologia.files.wordpress.com
+                    </a>
+                    <a href="#" class="list-group-item list-group-item-action disabled">
+                        JAMECO electronics. (s.f). Arduino Motor Shield. Silicon Valley, EU.: JAMECO
+                        electronics. Recuperado de
+                        https://www.jameco.com/jameco/products/prodds/2152403.pdf
                     </a>
 
                     <a href="#" class="list-group-item list-group-item-action active disabled">Páginas Web</a>
@@ -55,6 +65,9 @@
                     </a>
                     <a href="#" class="list-group-item list-group-item-action disabled">
                         http://www.papeleriamodelo.com/tienda/pilas-triple-aaa/
+                    </a>
+                    <a href="#" class="list-group-item list-group-item-action disabled">
+                        https://www.thingiverse.com/thing:1684471
                     </a>
 
                     <a href="#" class="list-group-item list-group-item-action active disabled">Íconos</a>
@@ -98,6 +111,9 @@
                     </a>
                     <a href="#" class="list-group-item list-group-item-action disabled">
                         https://www.prometec.net/producto/modulo-bluetooth-hc-06/#
+                    </a>
+                    <a href="#" class="list-group-item list-group-item-action disabled">
+                        https://www.amazon.es/Protoboard-contactos-Breadboard-prototipos-soldadura/dp/B00JGFDKBQ
                     </a>
                 </div>
           </div> <!-- Section termination-->
