--- a/app/models.html
+++ b/app/models.html
@@ -76,11 +76,10 @@
                   <div class="card-body">
                     <img class="card-img-top" src="images/nvl2.png"  alt="Card image cap">
                     <h5 class="card-title">Nivel 2</h5>
-                    <p class="card-text">Generador eléctrico</br>
-                    Motor</p>
+                    <p class="card-text">Generador mecánico</p>
                   </div>
                   <div class="card-footer">
-                    <a href="multipleLvls.html" class="btn btn-primary" onclick="showOptions('2')">Comenzar</a>
+                      <a href="description.html" class="btn btn-primary" onclick="setModel('Generador Mecánico');showOptions('3')">Comenzar</a>
                   </div>
                 </div>
               </div> <!-- Card-deck termination-->
