--- a/app/bibliography.html
+++ b/app/bibliography.html
@@ -115,6 +115,9 @@
                     <a href="#" class="list-group-item list-group-item-action disabled">
                         https://www.amazon.es/Protoboard-contactos-Breadboard-prototipos-soldadura/dp/B00JGFDKBQ
                     </a>
+                    <a href="#" class="list-group-item list-group-item-action disabled">
+                        https://www.crcibernetica.com/gear-motor-dg01d-2-motors/
+                    </a>
                 </div>
           </div> <!-- Section termination-->
         </div>
