--- a/app/ComponentDescription.html
+++ b/app/ComponentDescription.html
@@ -26,7 +26,7 @@
         </div>
         <div class="separator"></div>
     </div>
-    <div class="fab"><a href="description.html"> <i class="fa fa-arrow-left fa-3x"> </i> </a></div>
+    <div class="fab" id="component-back"></div>
 </div>
 </body>
 </html>
