--- a/app/bibliography.html
+++ b/app/bibliography.html
@@ -118,6 +118,9 @@
                     <a href="#" class="list-group-item list-group-item-action disabled">
                         https://www.crcibernetica.com/gear-motor-dg01d-2-motors/
                     </a>
+                    <a href="#" class="list-group-item list-group-item-action disabled">
+                        https://www.micro-log.com/ferreteria/853-100-tornillos-m3-10mm.html
+                    </a>
                 </div>
           </div> <!-- Section termination-->
         </div>
