--- a/app/models.html
+++ b/app/models.html
@@ -56,7 +56,7 @@
                   <p class="card-text">Tutoriales básicos</p>
                   </div>
                   <div class="card-footer">
-                      <a href="section.html" class="btn btn-primary" onclick="setModel('Tutoriales Básicos');showOptions('2')">Comenzar</a>
+                      <a href="section.html" class="btn btn-primary" onclick="setModel('Tutoriales Básicos');showOptions('lvlZero')">Comenzar</a>
                   </div>
                 </div>
 
@@ -79,7 +79,7 @@
                     <p class="card-text">Generador mecánico</p>
                   </div>
                   <div class="card-footer">
-                      <a href="description.html" class="btn btn-primary" onclick="setModel('Generador Mecánico');showOptions('3')">Comenzar</a>
+                      <a href="description.html" class="btn btn-primary" onclick="setModel('Generador Mecánico');showOptions('noMultipleLvls')">Comenzar</a>
                   </div>
                 </div>
               </div> <!-- Card-deck termination-->
@@ -94,7 +94,7 @@
                       <p class="card-text">Girabot</p>
                     </div>
                     <div class="card-footer">
-                      <a href="description.html" class="btn btn-primary" onclick="setModel('Girabot');showOptions('3')">Comenzar</a>
+                      <a href="description.html" class="btn btn-primary" onclick="setModel('Girabot');showOptions('noMultipleLvls')">Comenzar</a>
                     </div>
                   </div>
 
@@ -105,7 +105,7 @@
                       <p class="card-text">Brazo mecánico</p>
                     </div>
                     <div class="card-footer">
-                      <a href="description.html" class="btn btn-primary" onclick="setModel('Brazo Mecánico');showOptions('3')">Comenzar</a>
+                      <a href="description.html" class="btn btn-primary" onclick="setModel('Brazo Mecánico');showOptions('noMultipleLvls')">Comenzar</a>
                     </div>
                   </div>
 
@@ -116,7 +116,7 @@
                       <p class="card-text">Carro</p>
                     </div>
                     <div class="card-footer">
-                      <a href="description.html" class="btn btn-primary" onclick="setModel('Carro');showOptions('3')" >Comenzar</a>
+                      <a href="description.html" class="btn btn-primary" onclick="setModel('Carro');showOptions('noMultipleLvls')" >Comenzar</a>
                     </div>
                   </div>
                 </div> <!-- Card-deck termination-->
